# HPC-molecular-dynamics

./: .gitignore  CMakeLists.txt  README.md  TODO.md  requirements.txt
milestones/: CMakeLists.txt
milestones/01/: CMakeLists.txt  main.cpp
milestones/04/: CMakeLists.txt  main.cpp  plot_energy.py  simulate_and_plot.py
milestones/05/: CMakeLists.txt  main.cpp
milestones/06/: CMakeLists.txt  main.cpp
milestones/07/: CMakeLists.txt  main.cpp
milestones/07/clusters/: cluster_10179.xyz  cluster_12431.xyz  cluster_1415.xyz  cluster_147.xyz  cluster_14993.xyz  cluster_17885.xyz  cluster_2057.xyz  cluster_21127.xyz  cluster_24739.xyz  cluster_2869.xyz  cluster_28741.xyz  cluster_309.xyz  cluster_3871.xyz  cluster_5083.xyz  cluster_55.xyz  cluster_561.xyz  cluster_6525.xyz  cluster_8217.xyz  cluster_923.xyz
milestones/07/outputs/: cluster_1415.csv  cluster_2057.csv  cluster_2869.csv  cluster_3871.csv  cluster_923.csv
milestones/08/: CMakeLists.txt  main.cpp
milestones/09/: CMakeLists.txt  main.cpp  make_whisker.py  whisker_medium.xyz
milestones/09/outputs/: whisker_large_t0_li005.csv  whisker_large_t0_li01.csv  whisker_large_t100_li005.csv  whisker_large_t100_li01.csv  whisker_medium_t0_li005.csv  whisker_medium_t0_li01.csv  whisker_medium_t100_li005.csv  whisker_medium_t100_li01.csv  whisker_small_t0_li005.csv  whisker_small_t0_li01.csv  whisker_small_t100_li005.csv  whisker_small_t100_li01.csv
plotting/: plot_csv.py  plot_energy.py  simulate_and_plot.py
src/: CMakeLists.txt  atoms.h  average.h  domain.cpp  domain.h  ducastelle.cpp  ducastelle.h  lj_direct_summation.cpp  lj_direct_summation.h  neighbors.cpp  neighbors.h  simulation_utils.h  simulation_utils_mpi.h  thermostat.cpp  thermostat.h  types.h  verlet.cpp  verlet.h  writer.h  writer_mpi.h  xyz.cpp
tests/: CMakeLists.txt  test_ducastelle.cpp  test_lj_direct_summation.cpp  test_neighbors.cpp  test_thermostat.cpp  test_verlet.cpp
